--- a/deploy/course-service.yaml
+++ b/deploy/course-service.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: course-service
           image: mostafijurr/ms-course-service:1.1
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 8883
           env:
