--- a/deploy/gateway.yaml
+++ b/deploy/gateway.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: mostafijurr/ms-gateway-service:1.1
+          image: mostafijurr/ms-gateway-service:1.2
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9090
@@ -49,7 +49,7 @@ metadata:
 spec:
   selector:
     app: gateway
-  type: ClusterIP
+  type: NodePort
   ports:
     - name: http
       port: 9090
