--- a/getway/src/main/resources/application-k8s.yml
+++ b/getway/src/main/resources/application-k8s.yml
@@ -1,6 +1,25 @@
 spring:
   application:
     name: gateway
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
+      routes:
+        - id: course-service
+          uri: lb://course-service
+          predicates:
+            - Path=/course/**
+        - id: student-service
+          uri: lb://student-service
+          predicates:
+            - Path=/student/**
+        - id: address-service
+          uri: lb://address-service
+          predicates:
+            - Path=/address/**
 
 eureka:
   client:
