--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,11 +25,25 @@ jobs:
     env:
       IMAGE_NAME: mostafijurr/ms-${{ github.event.inputs.service }}
       IMAGE_TAG: ${{ github.event.inputs.tag }}
-      SERVICE_DIR: ${{ github.event.inputs.service }}-service
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set SERVICE_DIR based on service selection
+        id: service_dir
+        run: |
+          case "${{ github.event.inputs.service }}" in
+            gateway)
+              echo "SERVICE_DIR=getway" >> $GITHUB_OUTPUT
+              ;;
+            eureka)
+              echo "SERVICE_DIR=eureka-service" >> $GITHUB_OUTPUT
+              ;;
+            *)
+              echo "SERVICE_DIR=${{ github.event.inputs.service }}-service" >> $GITHUB_OUTPUT
+              ;;
+          esac
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -43,8 +57,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./${{ env.SERVICE_DIR }}
-          file: ./${{ env.SERVICE_DIR }}/Dockerfile
+          context: ./${{ steps.service_dir.outputs.SERVICE_DIR }}
+          file: ./${{ steps.service_dir.outputs.SERVICE_DIR }}/Dockerfile
           push: true
           tags: |
             ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
