--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,10 +23,8 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: mostafijurr/ms-${{ github.event.inputs.service }}
+      SERVICE_INPUT: ${{ github.event.inputs.service }}
       IMAGE_TAG: ${{ github.event.inputs.tag }}
-      SERVICE_DIR: ${{ github.event.inputs.service }}-service
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -39,6 +37,31 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+
+      - name: Set service directory and image name
+        id: set-vars
+        run: |
+          DOCKERHUB_USER="${{ secrets.DOCKERHUB_USERNAME }}"
+          if [[ -z "$DOCKERHUB_USER" ]]; then
+            echo "DOCKERHUB_USERNAME secret must be set!"
+            exit 1
+          fi
+          case "${{ env.SERVICE_INPUT }}" in
+            gateway)
+              SERVICE_DIR="getway"
+              IMAGE_NAME="$DOCKERHUB_USER/ms-gateway-service"
+              ;;
+            eureka)
+              SERVICE_DIR="eureka-server"
+              IMAGE_NAME="$DOCKERHUB_USER/ms-eureka-server"
+              ;;
+            *)
+              SERVICE_DIR="${{ env.SERVICE_INPUT }}-service"
+              IMAGE_NAME="$DOCKERHUB_USER/ms-${{ env.SERVICE_INPUT }}-service"
+              ;;
+          esac
+          echo "SERVICE_DIR=$SERVICE_DIR" >> $GITHUB_ENV
+          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
 
       - name: Build JAR with Gradle
         working-directory: ${{ env.SERVICE_DIR }}
